<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_view">
        <menu>
            <item
                android:id="@+id/action_normal"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_normal"/>
            <item
                android:id="@+id/action_hybrid"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_hybrid"/>
            <item
                android:id="@+id/action_satellite"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_satellite"/>
            <item
                android:id="@+id/action_terrain"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_terrain"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_findItem"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_Item"/>
    <item
        android:id="@+id/menu_CurrentDB"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cDB"/>
</menu>